--- a/src/components/style.css
+++ b/src/components/style.css
@@ -13,6 +13,9 @@
     background-color: #009ddc;
     color: white;
 }
+.custbtn{
+margin: 0 auto;
+}
 /* .customA:hover{
     color: #009ddc;
 } */
