--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -12,8 +12,6 @@ h5{
     font-weight: 600;
 }
 
-
-
 .animated{
     animation:up-down 2s ease-in-out infinite alternate-reverse both;
 }
@@ -95,7 +93,7 @@ padding-bottom: 50px;
 }
 .custom-card:hover{
     transition: 0.2ms;
-    /* transform: scale(1.025); */
+    transform: scale(1.025);
     background-color: #f8f9fa;
 }
 .btn{
@@ -103,19 +101,24 @@ padding-bottom: 50px;
 }
 .custom-card:hover .btnHover{
     transition: 0.2ms;
-    background-color: white;
-    color: black;
+    background-color: blue;
+    color: white;
     font-weight: 600;
     border: 1px solid black;
 }
 .card-header{
-    min-height: 76px;
+    min-height: 57px;
+    padding: 0;
 }
 .card-header h5{
     font-weight: 600;
     font-size: 15px;
     padding: 10px 0;
+    color: white;
+    margin: auto 0;
+    line-height: 57px;
 }
+
 .cardExpr:hover{
     transition: 0.2ms;
     transform: scale(1.025);
@@ -123,15 +126,16 @@ padding-bottom: 50px;
 .a a{
     text-decoration: none;
     font-size: 15px;
-    color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 15px;
     font-weight: 600;
 }
 
-.card-footer:hover{
-    background-color: blue;
-}
+
 .a:hover a{
-    color:black;
+    background-color: blue;
+    color:white;
 }
 
 
@@ -147,6 +151,7 @@ padding-bottom: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 22px;
+    border: 1px solid black;
 }
 .img-dim{
     /* width:280px; */
@@ -174,6 +179,10 @@ padding-bottom: 50px;
     background: url(../images/back4.png);
     width: 100%;
 }
+.secondSection{
+    background: url(../images/back4.png);
+    width: 100%;
+}
 .topFooter{
     padding: 20px 0;
     height:auto
@@ -189,8 +198,9 @@ padding-bottom: 50px;
 
 /* services page */
 .custImg{
-border-radius: 10px;
-padding: 0;
+border-radius: 22px;
+padding: 10px;
+width:100%
 }
 .cust-row{
     border: 1px solid black;
@@ -232,4 +242,9 @@ padding: 0;
 .reveal.active{
     transform: translateY(0px);
     opacity: 1;
+}
+
+/* Login Page */
+.custForm{
+    width:80%;
 }
